--- a/package.json
+++ b/package.json
@@ -1,31 +1,24 @@
 {
-  "name": "eth-online",
+  "name": "oh-my-greeks",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@0x/protocol-utils": "^1.3.0",
     "@aragon/ui": "^1.7.0",
     "@babel/runtime": "^7.12.0",
-    "@testing-library/jest-dom": "^4.2.4",
-    "@testing-library/react": "^9.3.2",
-    "@testing-library/user-event": "^7.1.2",
+    "@lyrafinance/lyra-js": "^0.0.7",
     "@types/jest": "^24.0.0",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.0",
     "bignumber.js": "^9.0.1",
-    "bnc-notify": "^1.4.0",
-    "bnc-onboard": "^1.37.1",
-    "chart.js": "^2.9.4",
+    "bnc-notify": "^1.9.5",
+    "bnc-onboard": "^1.38.2",
     "ethereum-ens": "^0.8.0",
-    "ethers": "^5.0.32",
+    "ethers": "^5.6.5",
     "greeks": "^1.0.0",
     "implied-volatility": "^1.0.0",
-    "kaktana-react-lightweight-charts": "^1.1.5",
-    "lightweight-charts": "^3.2.0",
     "moment": "^2.29.1",
     "moment-timezone": "^0.5.31",
     "react": "^16.13.1",
-    "react-chartjs-2": "^2.11.1",
     "react-dom": "^16.13.1",
     "react-ga": "^3.3.0",
     "react-grid-system": "^7.1.1",
