chore: restore npm versions

--- a/package.json
+++ b/package.json
@@ -5,15 +5,15 @@
   "dependencies": {
     "@aragon/ui": "^1.7.0",
     "@babel/runtime": "^7.12.0",
-    "@lyrafinance/lyra-js": "^0.0.7",
     "@types/jest": "^24.0.0",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.0",
     "bignumber.js": "^9.0.1",
-    "bnc-notify": "^1.9.5",
-    "bnc-onboard": "^1.38.2",
+    "bnc-notify": "^1.4.0",
+    "bnc-onboard": "^1.37.1",
+    "chart.js": "^2.9.4",
     "ethereum-ens": "^0.8.0",
-    "ethers": "^5.6.5",
+    "ethers": "^5.0.32",
     "greeks": "^1.0.0",
     "implied-volatility": "^1.0.0",
     "moment": "^2.29.1",
