--- a/package.json
+++ b/package.json
@@ -26,7 +26,6 @@
     "react-scripts": "3.4.3",
     "react-use-websocket": "^2.2.0",
     "styled-components": "^5.2.1",
-    "typescript": "~3.7.2",
     "web3": "^1.3.0"
   },
   "devDependencies": {
@@ -39,7 +38,8 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^3.1.0",
     "lint-staged": "^10.0.10",
-    "prettier": "^2.2.1"
+    "prettier": "^2.2.1",
+    "typescript": "^3.7.7"
   },
   "scripts": {
     "sync-assets": "copy-aragon-ui-assets ./public",
