--- a/package.json
+++ b/package.json
@@ -38,8 +38,7 @@
     "eslint-plugin-react-hooks": "^2.5.1",
     "husky": "^3.1.0",
     "lint-staged": "^10.0.10",
-    "prettier": "^2.2.1",
-    "typescript": "^3.7.7"
+    "prettier": "^2.2.1"
   },
   "scripts": {
     "sync-assets": "copy-aragon-ui-assets ./public",
