--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@aragon/ui": "^1.7.0",
     "@babel/runtime": "^7.12.0",
+    "@lyrafinance/lyra-js": "^0.0.9",
     "@types/jest": "^24.0.0",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.0",
