--- a/package.json
+++ b/package.json
@@ -9,13 +9,14 @@
     "@types/jest": "^24.0.0",
     "@types/react": "^16.9.52",
     "@types/react-dom": "^16.9.0",
+    "@web3-onboard/coinbase": "^2.0.10",
     "@web3-onboard/core": "^2.6.0",
+    "@web3-onboard/fortmatic": "^2.0.9",
     "@web3-onboard/gnosis": "^2.0.8",
     "@web3-onboard/injected-wallets": "^2.0.15",
     "@web3-onboard/walletconnect": "^2.0.8",
     "bignumber.js": "^9.0.1",
     "bnc-notify": "^1.4.0",
-    "bnc-onboard": "^1.37.1",
     "chart.js": "^2.9.4",
     "ethereum-ens": "^0.8.0",
     "ethers": "^5.6.9",
